force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/Zendesk__Zendesk_Ticket__c.object-meta.xml
<CustomObject>
    <description>Custom object to store Zendesk Support tickets (mostly closed ones) on salesforce</description>
    <label>Zendesk Support Ticket</label>
    <nameField>
        <label>Zendesk Support Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>