force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Implementation_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Consultant__c</fullName>
    <label>Implementation Consultant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>