force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Jira_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Jira_Blocker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to count the number of &quot;Blocker&quot; incidents from the &quot;Jira Status&quot; field.</description>
    <label>Jira - Blocker</label>
    <type>Checkbox</type>
</CustomField>