force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Jira_Major__c.field-meta.xml
<CustomField>
    <fullName>Jira_Major__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to count the number of &quot;Major&quot; incidents from the &quot;Jira Status&quot; field.</description>
    <label>Jira - Major</label>
    <type>Checkbox</type>
</CustomField>