force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Jira_Priority__c.field-meta.xml
<CustomField>
    <fullName>Jira_Priority__c</fullName>
    <label>Jira Priority</label>
    <length>15</length>
    <type>Text</type>
</CustomField>