force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Jira_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Status__c</fullName>
    <label>Jira Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>