force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Severity_Score__c.field-meta.xml
<CustomField>
    <fullName>Severity_Score__c</fullName>
    <label>Severity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>