force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Assignee_Name__c</fullName>
    <label>Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>