force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Brand__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Brand__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>