force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Custom_Field_1__c</fullName>
    <label>Custom Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>