force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Date_Time_initially_assigned__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Date_Time_initially_assigned__c</fullName>
    <label>Date/Time initially assigned</label>
    <type>DateTime</type>
</CustomField>