force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Date_Time_updated__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Date_Time_updated__c</fullName>
    <label>Date/Time updated</label>
    <type>DateTime</type>
</CustomField>