force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Description__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>