force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__DomainUniqueTicketId__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__DomainUniqueTicketId__c</fullName>
    <label>Domain Unique Ticket Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>