force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Zendesk_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>