force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Organization__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Zendesk_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>