force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Reply_Time_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Reply_Time_Calendar__c</fullName>
    <inlineHelpText>In minutes</inlineHelpText>
    <label>Reply time (calendar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>