force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Requester_Wait_Time_Business__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Requester_Wait_Time_Business__c</fullName>
    <label>Requester wait time (business)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>