force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__RequesterEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__RequesterEmailAddress__c</fullName>
    <description>When Accounts/Contacts are not created through the creation of a Ticket from Zendesk, this field will be populated.</description>
    <label>Requester Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>