force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__RequesterName__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__RequesterName__c</fullName>
    <description>When Accounts/Contacts are not created through the creation of a Ticket from Zendesk Support, this field will be populated.</description>
    <label>Requester Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>