force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__RequesterOrganization__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__RequesterOrganization__c</fullName>
    <description>When Accounts/Contacts are not created through the creation of a ticket from Zendesk Support, this field will be populated.</description>
    <label>Organization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>