force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Resolution_time_business__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Resolution_time_business__c</fullName>
    <label>Resolution time (business)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>