force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Test_field_2__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Test_field_2__c</fullName>
    <label>Test field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>