force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Ticket_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Ticket_Form_Id__c</fullName>
    <label>Ticket Form Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>