force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Ticket_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Ticket_Form_Name__c</fullName>
    <label>Ticket Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>