force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/fields/Zendesk__Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Ticket_ID__c</fullName>
    <description>Stores Zendesk Support Ticket Id</description>
    <externalId>true</externalId>
    <label>Ticket ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>