force-app/main/default/objects/Zendesk__Zendesk_Ticket__c/listViews/Zendesk__All.listView-meta.xml
<ListView>
    <fullName>Zendesk__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Zendesk__Description__c</columns>
    <columns>Zendesk__Requester__c</columns>
    <columns>Zendesk__ZendeskDomain__c</columns>
    <columns>Zendesk__Organization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>